# empire

./: .clang-tidy  .gitignore  .gitignore.orig  API_DESIGN.md  BOOST.md  BOOST_TEST.md  CMakeLists.txt  CONTRIBUTE.md  CREDITS.md  Commands.xlsx  Common.mk  Config.uxf  DESIGN.md  DESIGN_CONCEPTS.md  DOXYGEN.md  Empire.cbp  FAQ.md  GOALS.md  IMPLEMENTATION.md  LICENSE.md  LOGGING.md  Log_design.uxf  Makefile  PlantUML.md  README.md  STATISTICS.md  World.cpp  World.hpp  doxygen.conf  empire_4.config  main.cpp
.doxygen/: Doxyfile  Doxyfile.in  stats.py  update_version.py
.doxygen/html/: extraStyleSheet.css
Commodities/: Commodities.cpp  Commodity.cc  Commodity.cpp  Commodity.hh  Commodity.hpp  CommodityTest.cpp  CommodityType.cc  CommodityType.cpp  CommodityType.hh  CommodityType.hpp  EmpireExceptions.cpp  EmpireExceptions.hpp  Makefile
Nations/: Makefile  Nation.cpp  Nation.hpp  NationTest  NationTest.cpp
Server/: Core.cpp  Core.hpp  Log.cpp  Log.hpp  Makefile
docs/: BOOST_TEST.md  CONTRIBUTE.md  CREDITS.md  DESIGN.md
doxygen/: doxygen.conf
future_content/: CONTRIBUTE.md  Commands.xlsx  Empire_Design.uxf  README.md
images/: Benchmarking Tool.uxf
lib/: EmpireExceptions.cpp  EmpireExceptionsTest  EmpireExceptionsTest.cpp  Iterator.hpp  Log.cpp  Log.hpp  LogTest.cpp  Makefile  README  Singleton.hpp  SingletonTest.cpp
orig/: Common.mk  Makefile  README  template.cpp
orig/Commodities/: Commodity.cpp  Commodity.hpp  CommodityTest.cpp  Makefile
orig/Nations/: Makefile  Nation.cpp  Nation.hpp  NationTest.cpp
orig/Server/: Core.cpp  Core.hpp  CoreTest.cpp  Makefile
orig/doxygen/: doxygen.conf
orig/lib/: EmpireExceptions.cpp  EmpireExceptions.hpp  EmpireExceptionsTest.cpp  Iterator.hpp  Log.cpp  Log.hpp  LogTest.cpp  Makefile  README  Singleton.cpp  SingletonTest.cpp
src/: Serialization_demo.cpp  main.cpp  main_empire_client.cpp  main_empire_server.cpp  typedefs.h  typedefs.hpp  version.cpp  version.h  version.hpp
src/lib/: Log.cpp  Log.hpp  LogConfig.cpp  LogConfig.hpp  LogConsumer.cpp  LogConsumer.hpp  LogEntry.cpp  LogEntry.hpp  LogSeverity.cpp  LogSeverity.hpp  README.md  Singleton.cpp  Singleton.hpp
tests/: CMakeLists.txt  Makefile  t.cpp  test_Log.cpp  test_Log_debug.cpp  test_Log_trace.cpp  test_Singleton.cpp  test_version.cpp
